; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_vec.c_vc4_vec_encoder_atomic_mode_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/vc4/extr_vc4_vec.c_vc4_vec_encoder_atomic_mode_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_encoder = type { i32 }
%struct.drm_crtc_state = type { i32 }
%struct.drm_connector_state = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }
%struct.vc4_vec_encoder = type { %struct.vc4_vec* }
%struct.vc4_vec = type { i32* }

@vc4_vec_tv_modes = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_encoder*, %struct.drm_crtc_state*, %struct.drm_connector_state*)* @vc4_vec_encoder_atomic_mode_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vc4_vec_encoder_atomic_mode_set(%struct.drm_encoder* %0, %struct.drm_crtc_state* %1, %struct.drm_connector_state* %2) #0 {
  %4 = alloca %struct.drm_encoder*, align 8
  %5 = alloca %struct.drm_crtc_state*, align 8
  %6 = alloca %struct.drm_connector_state*, align 8
  %7 = alloca %struct.vc4_vec_encoder*, align 8
  %8 = alloca %struct.vc4_vec*, align 8
  store %struct.drm_encoder* %0, %struct.drm_encoder** %4, align 8
  store %struct.drm_crtc_state* %1, %struct.drm_crtc_state** %5, align 8
  store %struct.drm_connector_state* %2, %struct.drm_connector_state** %6, align 8
  %9 = load %struct.drm_encoder*, %struct.drm_encoder** %4, align 8
  %10 = call %struct.vc4_vec_encoder* @to_vc4_vec_encoder(%struct.drm_encoder* %9)
  store %struct.vc4_vec_encoder* %10, %struct.vc4_vec_encoder** %7, align 8
  %11 = load %struct.vc4_vec_encoder*, %struct.vc4_vec_encoder** %7, align 8
  %12 = getelementptr inbounds %struct.vc4_vec_encoder, %struct.vc4_vec_encoder* %11, i32 0, i32 0
  %13 = load %struct.vc4_vec*, %struct.vc4_vec** %12, align 8
  store %struct.vc4_vec* %13, %struct.vc4_vec** %8, align 8
  %14 = load i32*, i32** @vc4_vec_tv_modes, align 8
  %15 = load %struct.drm_connector_state*, %struct.drm_connector_state** %6, align 8
  %16 = getelementptr inbounds %struct.drm_connector_state, %struct.drm_connector_state* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds i32, i32* %14, i64 %18
  %20 = load %struct.vc4_vec*, %struct.vc4_vec** %8, align 8
  %21 = getelementptr inbounds %struct.vc4_vec, %struct.vc4_vec* %20, i32 0, i32 0
  store i32* %19, i32** %21, align 8
  ret void
}

declare dso_local %struct.vc4_vec_encoder* @to_vc4_vec_encoder(%struct.drm_encoder*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
